--- a/web/index.html
+++ b/web/index.html
@@ -1,35 +1,59 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
+    <!--
+      If you are serving your web app in a path other than the root, change the
+      href value below to reflect the base path you are serving from.
 
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
+      The path provided below has to start and end with a slash "/" in order for
+      it to work correctly.
 
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-  -->
+      For more details:
+      * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
+    -->
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="A new Flutter project.">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="flutter_admin">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="flutter_admin">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>flutter_admin</title>
-  <link rel="manifest" href="manifest.json">
+    <title>flutter_admin</title>
+    <link rel="manifest" href="manifest.json">
 </head>
+
 <body oncontextmenu="return false;">
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-  <script>
+<!--
+@author: cairuoyu
+@homepage: http://cairuoyu.com
+@github: https://github.com/cairuoyu/flutter_admin
+@date: 2021/7/7
+@version: 1.0
+@description: 页面加载时显示loading
+-->
+<div id="loading">
+    <div class="spinner">
+        <div class="re1"></div>
+        <div class="re2"></div>
+        <div class="re3"></div>
+        <div class="re4"></div>
+        <div class="re5"></div>
+    </div>
+    <div class="info">
+        <p>加载中...</p>
+        <p>初次加载资源比较慢</p>
+    </div>
+</div>
+<!-- This script installs service_worker.js to provide PWA functionality to
+     application. For more information, see:
+     https://developers.google.com/web/fundamentals/primers/service-workers -->
+<script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
     function loadMainDartJs() {
@@ -94,4 +118,5 @@
     }
   </script>
 </body>
+
 </html>
