--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,8 @@
       * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
     -->
 
+    <base href="/flutter_admin/">
+
     <meta charset="UTF-8">
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="A new Flutter project.">
